Change default dashboard image

--- a/www/templates/dash.html
+++ b/www/templates/dash.html
@@ -3,7 +3,7 @@
   <ion-content class="padding">
     
     <div class="image" ng-show="!hasTrash">
-      <img src="./img/trio.png" alt="Trashee">
+      <img src="./img/trio_overlap.jpg" alt="Trashee">
       <p>Sift your trash!</p>
     </div>
 
